--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "tsup": "^8.0.2",
     "tsx": "^4.9.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
